--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1"
   },
   "scripts": {
@@ -33,6 +34,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ],
-    "homepage": "https://ihyeonseung.github.io/movie_app_learn"
+    "homepage": "https://ihyeonseung.github.io/movie_app_learn/"
   }
 }
